<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Speed Test</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">About Us</string>
    <string name="title_activity_throughput">Speed Test</string>
    <string name="title_activity_throughput_history">Speed Test History</string>
    <string name="title_activity_latency">Latency Test</string>
    <string name="title_activity_data_usage">Data Usage</string>
    <string name="title_activity_traceroute">Traceroute</string>
    <string name="title_activity_application_detail">Application Detail</string>
    <string name="scheduler_priority">2</string>
    <string name="title_activity_censorship">Censorship</string>
    <string name="title_activity_latency_detail">Latency Detail</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_activity_terms_and_conditions">Terms and Conditions</string>
    <string name="title_activity_data_cap">Data Cap</string>
    <string name="title_activity_data_cap_desc">Choose how much data you get per month</string>
    <string name="title_activity_data_cap_button">Start</string>
    <string name="title_activity_data_plan_cap">Data Plan, Promotion, and Cap</string>
    <string name="title_activity_data_plan_cap_desc">Please Select you data plan, promotion plan and how much data you get per month</string>
    <string name="title_activity_data_plan">Data Plan</string>
    <string name="title_activity_data_plan_type">What data plan do you use?</string>
    <string name="title_activity_data_plan_promo">Which promotion do you use?</string>
    <string name="title_activity_data_plan_button">Next</string>
    <string name="title_activity_data_plan_promotion_edit">Enter other internet promotion here.</string>

    <string name="loading">PythonAPK running...</string>
    <string name="title_activity_survey">SurveyActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="survey_title">Available Surveys:</string>
    <string name="title_activity_survey_taking">SurveyTaking</string>
    <string name="title_activity_display_survey">DisplaySurvey</string>
    <string name="title_activity_interference_consent">InterferenceConsent</string>


</resources>
