<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/frame_color">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_data_plan"
        android:layout_gravity="center_horizontal" />

    <!--TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/title_activity_data_plan_desc"
        android:layout_gravity="center_horizontal" /-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/title_activity_data_plan_type"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.18"
        android:isScrollContainer="true"
        android:background="@android:color/white"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarSize="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <RadioGroup
            android:id="@+id/data_plan_type_radio_group"
            android:layout_width="match_parent"
            android:layout_height="0dip" >
        </RadioGroup>
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/title_activity_data_plan_promo"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.60"
        android:isScrollContainer="true"
        android:background="@android:color/white"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarSize="30dp"
        android:fadeScrollbars="false"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <RadioGroup
            android:id="@+id/data_plan_promotion_radio_group"
            android:layout_width="match_parent"
            android:layout_height="0dip" >
        </RadioGroup>
    </ScrollView>

    <EditText
        android:id="@+id/data_plan_promotion_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_activity_data_plan_promotion_edit"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:visibility="invisible"
        />

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_activity_data_plan_button"
            android:id="@+id/data_plan_start"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:padding="5dp" />
    </RelativeLayout>
</LinearLayout>